--- a/index.html
+++ b/index.html
@@ -221,21 +221,11 @@ body::before {
 </head>
 <body>
     
-  <div class="video-row" style="display:flex; justify-content:center; gap:20px; max-width:100%; margin:auto;">
-    <!-- Зүүн видео -->
-    <div class="video-container" style="flex:1; min-width:300px;">
-        <video autoplay muted loop playsinline>
-            <source src="video.mp4.mp4" type="video/mp4">
-        </video>
-    </div>
+  <video autoplay muted loop playsinline width="100%">
+  <source src="download.mp4" type="video/mp4">
+  <source src="download.WEBM" type="video/WEBM">
+</video>
 
-    <!-- Баруун видео -->
-    <div class="video-container" style="flex:1; min-width:300px;">
-        <video autoplay muted loop playsinline>
-            <source src="download.mp4" type="video/mp4">
-        </video>
-    </div>
-</div>
 
 
 
