--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ body::before {
 <section class="fade-in">
 <h2>WELLCOME!</h2>
 <p>&lt;3</p>
+<p>Yes, this will be the desired configuration.</p>
 </section>  
 
 <section class="fade-in">
