--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>donk - CS2 Settings, Crosshair & Config</title>
+    <title>zeloxy - CS2 Settings, Crosshair & Config</title>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
 /* -------- Global -------- */
@@ -393,3 +393,4 @@ body::before {
 </main>
 </body>
 </html>
+
